--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "Follow On Mastodon",
-  "version": "1.0",
+  "version": "2.0",
 
   "description": "Follow Mastodon users from your preferred server.",
   "homepage_url": "https://github.com/duckinator/follow-on-mastodon",
@@ -11,19 +11,25 @@
     "96": "icons/mastodon-follow-96.png"
   },
 
+  "browser_specific_settings": {
+      "gecko": {
+          "id": "follow-on-mastodon@duckinator.net",
+          "strict_min_version": "115.0"
+      }
+  },
+
   "permissions": [
     "activeTab",
     "storage"
   ],
 
-  "browser_action": {
+  "action": {
     "default_icon": "icons/mastodon-follow-32.png",
     "default_title": "Follow on Mastodon",
     "default_popup": "popup/follow.html"
   },
 
   "options_ui": {
-    "page": "options/options.html",
-    "browser_style": true
+    "page": "options/options.html"
   }
 }
